# indeed-reviews-interviews-location-salary-job-1-1k

./: LICENSE  README.md  args.proxies  requirements.txt
indeed-reviews-interviews-location-salary-job-1k/: pyproject.toml  requirements.txt
indeed-reviews-interviews-location-salary-job-1k/data/: sample_input.json  sample_output.json
indeed-reviews-interviews-location-salary-job-1k/src/: main.py
indeed-reviews-interviews-location-salary-job-1k/src/config/: proxies.example.json  settings.example.json
indeed-reviews-interviews-location-salary-job-1k/src/crawlers/: company_reviews_crawler.py  faq_crawler.py  interviews_crawler.py  jobs_crawler.py  salaries_crawler.py
indeed-reviews-interviews-location-salary-job-1k/src/parsers/: company_parser.py  interview_parser.py  job_parser.py  review_parser.py  salary_parser.py
indeed-reviews-interviews-location-salary-job-1k/src/pipelines/: monitoring_pipeline.py  storage_pipeline.py
indeed-reviews-interviews-location-salary-job-1k/src/utils/: date_utils.py  http_client.py  logging_utils.py  pagination.py
indeed-reviews-interviews-location-salary-job-1k/tests/: test_interview_parser.py  test_job_parser.py  test_review_parser.py  test_salary_parser.py
