[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "indeed-reviews-interviews-location-salary-job-1k"
version = "0.1.0"
description = "Indeed company intelligence scraper: reviews, jobs, salaries, interviews, FAQ."
authors = [
    { name = "Bitbash", email = "sale@bitbash.dev" }
]
readme = ""
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]